--- a/_posts/r/2015-11-19-shapes.Rmd
+++ b/_posts/r/2015-11-19-shapes.Rmd
@@ -19,14 +19,14 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 ```
 # Shapes
 
-##### For more information on using shapes check out our [reference page](https://plot.ly/r/reference/#layout-shapes)
+##### For more information on using shapes check out our <b>[reference page](https://plot.ly/r/reference/#layout-shapes)</b>
 
 ### Rectangles
 ```{r, results='hide'}
 library(plotly)
 p <- plot_ly(economics, x = date, y = uempmed, name = "unemployment")
-# add shapes to the layout
 
+# add shapes to the layout
 p <- layout(p, title = 'Highlighting with Rectangles', 
              shapes = list(
                list(type = "rect", 
@@ -47,24 +47,25 @@ Circles are centered around  ((`x0`+`x1`)/2, (`y0`+`y1`)/2))
 ```{r, results='hide'}
 library(plotly)
 d <- diamonds[sample(nrow(diamonds), 1000), ]
-# note how size is automatically scaled and added as hover text
 d <- plot_ly(d, x = carat, y = price, text = paste("Clarity: ", clarity),
              mode = "markers", color = carat, size = carat, opacity = carat)
 d <- layout(d, title = 'Highlighting Regions with Circles', 
             shapes = list(
               list(type = 'circle',
-                   xref = 'x', x0 = .3, x1 = .475,
-                   yref = 'y', y0 = 250, y1 = 1500,
-                   fillcolor = 'rgb(50, 20, 90)', line = list(color = 'rgb(50, 20, 90)'),                        opacity = 0.2),
+                   xref = 'x', x0 = .2, x1 = .7,
+                   yref = 'y', y0 = 20, y1 = 3000,
+                   fillcolor = 'rgb(50, 20, 90)', line = list(color = 'rgb(50, 20, 90)'),
+                   opacity = 0.2),
               list(type = 'circle',
                    xref = 'x', x0 = .75, x1 = 1.5,
                    yref = 'y', y0 = 2500, y1 = 7500,
                    fillcolor = 'rgb(30, 100, 120)', line = list(color = 'rgb(30, 100, 120)'),
                    opacity = 0.2),
                list(type = 'circle',
-                   xref = 'x', x0 = 1.7, x1 = 2.4,
-                   yref = 'y', y0 = 12000, y1 = 17000,
-                   fillcolor = 'rgb(90, 200, 75)', line = list(color = 'rgb(90, 200, 75)'),                      opacity = 0.2)))
+                   xref = 'x', x0 = 1.6, x1 = 2.5,
+                   yref = 'y', y0 = 12500, y1 = 18500,
+                   fillcolor = 'rgb(90, 200, 75)', line = list(color = 'rgb(90, 200, 75)'),
+                   opacity = 0.2)))
 d
 ```
 ```{r, results='asis', echo=FALSE, message=FALSE}
