Added images for R examples, fixed some python examples.

--- a/_posts/r/2015-07-30-LaTeX.Rmd
+++ b/_posts/r/2015-07-30-LaTeX.Rmd
@@ -4,7 +4,7 @@ name: LaTeX Typesetting in R Graphs
 permalink: r/LaTeX/
 description: How to add LaTeX to R graphs.
 layout: base
-thumbnail: /images/latex.png
+thumbnail: thumbnail/latex.jpg
 language: r
 page_type: example_index
 has_thumbnail: false
