--- a/_posts/r/2015-07-30-axes.Rmd
+++ b/_posts/r/2015-07-30-axes.Rmd
@@ -4,7 +4,7 @@ name: Axes
 permalink: r/axes/
 description: How to adjust axes properties in R. Seven examples of linear and logarithmic axes, axes titles, and styling and coloring axes and grid lines.
 layout: base
-thumbnail: /images/axes.png
+thumbnail: thumbnail/axes.jpg
 language: r
 page_type: example_index
 has_thumbnail: false
