--- a/_posts/r/2015-07-30-contour-plots.Rmd
+++ b/_posts/r/2015-07-30-contour-plots.Rmd
@@ -4,7 +4,7 @@ name: Contour Plots
 permalink: r/contour-plots/
 description: How to make a contour plot in R. Two examples of contour plots of matrices and 2D distributions.
 layout: base
-thumbnail: /images/contour.png
+thumbnail: thumbnail/contour.jpg
 language: r
 page_type: example_index
 has_thumbnail: false
