--- a/_posts/r/2015-07-30-dot-plots.md
+++ b/_posts/r/2015-07-30-dot-plots.md
@@ -4,7 +4,7 @@ name: Dot plots
 permalink: r/dot-plots/
 description: How to make a dot plot in R. Dot plots show changes between two points in time or between two conditions. See dumbbell plots for connecting the two points with a line.
 layout: base
-thumbnail: /images/dot-plot.jpg
+thumbnail: thumbnail/dot-plot.jpg
 language: r
 page_type: example_index
 has_thumbnail: true
