--- a/_posts/r/2015-07-30-embedding-in-html.Rmd
+++ b/_posts/r/2015-07-30-embedding-in-html.Rmd
@@ -4,7 +4,7 @@ name: Embed Graphs in HTML
 permalink: r/embedding-plotly-graphs-in-HTML
 description: How to embed plotly graphs in HTML pages with plotly for R
 layout: base
-thumbnail: text-and-annotations.png
+thumbnail: text-and-annotations.jpg
 language: r
 page_type: example_index
 has_thumbnail: false
