--- a/_posts/r/2015-07-30-figure-labels.Rmd
+++ b/_posts/r/2015-07-30-figure-labels.Rmd
@@ -4,7 +4,7 @@ name: Axes Labels
 permalink: r/figure-labels
 description: How to set the title and axis-titles in python.
 layout: base
-thumbnail: figure-labels.png
+thumbnail: figure-labels.jpg
 language: r
 page_type: example_index
 has_thumbnail: false
