--- a/_posts/r/2015-07-30-font.Rmd
+++ b/_posts/r/2015-07-30-font.Rmd
@@ -4,7 +4,7 @@ name: Font
 permalink: r/font/
 description: font/ in R.
 layout: base
-thumbnail: font.png
+thumbnail: font.jpg
 language: r
 page_type: example_index
 has_thumbnail: false
