--- a/_posts/r/2015-07-30-insets.Rmd
+++ b/_posts/r/2015-07-30-insets.Rmd
@@ -4,7 +4,7 @@ name: Inset Plots
 permalink: r/insets/
 description: How to make an inset graph in R with Plotly
 layout: base
-thumbnail: /images/insets.png
+thumbnail: thumbnail/insets.jpg
 language: r
 page_type: example_index
 has_thumbnail: true
