--- a/_posts/r/2015-07-30-legend.Rmd
+++ b/_posts/r/2015-07-30-legend.Rmd
@@ -4,7 +4,7 @@ name: Legends
 permalink: r/legend/
 description: How to modify the legend in R graphs. Seven examples of how to move, color, and hide the legend.
 layout: base
-thumbnail: /images/legends.png
+thumbnail: thumbnail/legends.jpg
 language: r
 page_type: example_index
 has_thumbnail: false
