--- a/_posts/r/2015-07-30-log-plot.Rmd
+++ b/_posts/r/2015-07-30-log-plot.Rmd
@@ -4,7 +4,7 @@ name: Log Plots
 permalink: r/log-plot/
 description: How to make a plot with logarithmic axes in R.
 layout: base
-thumbnail: /images/log.png
+thumbnail: thumbnail/log.jpg
 language: r
 page_type: example_index
 has_thumbnail: false
