--- a/_posts/r/2015-07-30-privacy.Rmd
+++ b/_posts/r/2015-07-30-privacy.Rmd
@@ -4,7 +4,7 @@ name: Public vs Private Graphs
 permalink: r/privacy/
 description: How to set the privacy settings of plotly graphs in R.
 layout: base
-thumbnail: /images/privacy.png
+thumbnail: thumbnail/privacy.jpg
 language: r
 page_type: example_index
 has_thumbnail: false
