--- a/_posts/r/2015-07-30-shiny.Rmd
+++ b/_posts/r/2015-07-30-shiny.Rmd
@@ -8,7 +8,7 @@ redirect_from:
   - ggplot2/shiny/
 description: Getting Started with Shiny and Plotly
 layout: base
-thumbnail: /images/shiny-r.png
+thumbnail: thumbnail/shiny-r.jpg
 language: r
 page_type: example_index
 has_thumbnail: false
