--- a/_posts/r/2015-07-30-subplots.Rmd
+++ b/_posts/r/2015-07-30-subplots.Rmd
@@ -4,7 +4,7 @@ name: Subplots
 permalink: r/subplots/
 description: How to graph subplots and small multiples in R with Plotly.
 layout: base
-thumbnail: /images/subplots.png
+thumbnail: thumbnail/subplots.jpg
 language: r
 page_type: example_index
 has_thumbnail: true
