--- a/_posts/r/2015-07-30-text-and-annotations.Rmd
+++ b/_posts/r/2015-07-30-text-and-annotations.Rmd
@@ -4,7 +4,7 @@ name: Text and Annotations
 permalink: r/text-and-annotations/
 description: How to add text labels and annotations to plots in R.
 layout: base
-thumbnail: text-and-annotations.png
+thumbnail: thumbnail/text-and-annotations.jpg
 language: r
 page_type: example_index
 has_thumbnail: false
