--- a/_posts/r/2015-07-30-box-plots.Rmd
+++ b/_posts/r/2015-07-30-box-plots.Rmd
@@ -4,7 +4,7 @@ name: Box Plots
 permalink: r/box-plots/
 description: How to make an interactive box plot in R. Seven examples of box plots in R that are grouped, colored, and display the underlying data distribution.
 layout: base
-thumbnail: /images/box.png
+thumbnail: thumbnail/box.jpg
 language: r
 page_type: example_index
 has_thumbnail: true
