Added CDNs for Plotly JS, and matplotlib

--- a/_posts/r/2015-11-19-shapes.Rmd
+++ b/_posts/r/2015-11-19-shapes.Rmd
@@ -4,7 +4,7 @@ name: Shapes
 permalink: r/shapes/
 description: How to use shapes in R. Two examples on highlighting regions by adding shapes to your R charts.
 layout: base
-thumbnail: /images/shape.png
+thumbnail: thumbnail/shapes.jpg
 language: r
 page_type: example_index
 has_thumbnail: true
