fix typo for r shapes doc

--- a/_posts/r/2015-11-19-shapes.Rmd
+++ b/_posts/r/2015-11-19-shapes.Rmd
@@ -19,7 +19,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 ```
 # Shapes
 
-##### For more information on using shapes check out our <b>[reference page](https://plot.ly/r/reference/#layout-shapes)</b>
+##### Check out our <b>[reference page](https://plot.ly/r/reference/#layout-shapes)</b> for more information on using shapes!
 
 ### Rectangles
 ```{r, results='hide'}
