--- a/_posts/r/2015-11-19-shapes.md
+++ b/_posts/r/2015-11-19-shapes.md
@@ -15,7 +15,7 @@ order: 9
 
 # Shapes
 
-##### For more information on using shapes check out our <b>[reference page](https://plot.ly/r/reference/#layout-shapes)</b>
+##### Check out our <b>[reference page](https://plot.ly/r/reference/#layout-shapes)</b> for more information on using shapes!
 
 ### Rectangles
 
@@ -36,7 +36,7 @@ p <- layout(p, title = 'Highlighting with Rectangles',
                  y0 = 4, y1 = 12.5, yref = "y"))) 
 p
 ```
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/2761.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/2766.embed" width="800" frameBorder="0"></iframe>
 ### Circles
 Circles are centered around  ((`x0`+`x1`)/2, (`y0`+`y1`)/2))
 
@@ -64,4 +64,4 @@ d <- layout(d, title = 'Highlighting Regions with Circles',
                    opacity = 0.2)))
 d
 ```
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/2763.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/2768.embed" width="800" frameBorder="0"></iframe>
