--- a/_posts/python/heatmap/annotated_heatmap.ipynb
+++ b/_posts/python/heatmap/annotated_heatmap.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0a9e7d4bde1f27a28e7208692b36827c247bea7acc75dc3bcab92384f61e597c"
+  "signature": "sha256:95a9d2de79a9988a9135726ed2a2cb6d5aa17e531b52513fc1f98a1616697b1f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -78,7 +78,7 @@
        "output_type": "pyout",
        "prompt_number": 3,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107f11f90>"
+        "<plotly.tools.PlotlyDisplay at 0x107afcdd0>"
        ]
       }
      ],
@@ -116,13 +116,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 4,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107f11810>"
+        "<plotly.tools.PlotlyDisplay at 0x107afcf50>"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -157,13 +157,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 5,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107f11bd0>"
+        "<plotly.tools.PlotlyDisplay at 0x107afcbd0>"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -203,13 +203,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 6,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107f110d0>"
+        "<plotly.tools.PlotlyDisplay at 0x107b35390>"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -246,13 +246,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 9,
+       "prompt_number": 7,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107f11850>"
+        "<plotly.tools.PlotlyDisplay at 0x107afcd10>"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -349,13 +349,85 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 8,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107f37c50>"
+        "<plotly.tools.PlotlyDisplay at 0x1029b1c10>"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "###References"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "For more info on heatmaps, see: https://plot.ly/python/reference/#heatmap.<br> For more info about annotated_heatmaps, see:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "help(FF.create_annotated_heatmap)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Help on function create_annotated_heatmap in module plotly.tools:\n",
+        "\n",
+        "create_annotated_heatmap(z, x=None, y=None, annotation_text=None, colorscale='RdBu', font_colors=None, showscale=False, reversescale=False, **kwargs)\n",
+        "    BETA function that creates annotated heatmaps\n",
+        "    \n",
+        "    This function adds annotations to each cell of the heatmap.\n",
+        "    \n",
+        "    :param (list[list]|ndarray) z: z matrix to create heatmap.\n",
+        "    :param (list) x: x axis labels.\n",
+        "    :param (list) y: y axis labels.\n",
+        "    :param (list[list]|ndarray) annotation_text: Text strings for\n",
+        "        annotations. Should have the same dimensions as the z matrix. If no\n",
+        "        text is added, the values of the z matrix are annotated. Default =\n",
+        "        z matrix values.\n",
+        "    :param (list|str) colorscale: heatmap colorscale.\n",
+        "    :param (list) font_colors: List of two color strings: [min_text_color,\n",
+        "        max_text_color] where min_text_color is applied to annotations for\n",
+        "        heatmap values < (max_value - min_value)/2. If font_colors is not\n",
+        "        defined, the colors are defined logically as black or white\n",
+        "        depending on the heatmap's colorscale.\n",
+        "    :param (bool) showscale: Display colorscale. Default = False\n",
+        "    :param kwargs: kwargs passed through plotly.graph_objs.Heatmap.\n",
+        "        These kwargs describe other attributes about the annotated Heatmap\n",
+        "        trace such as the colorscale. For more information on valid kwargs\n",
+        "        call help(plotly.graph_objs.Heatmap)\n",
+        "    \n",
+        "    Example 1: Simple annotated heatmap with default configuration\n",
+        "    ```\n",
+        "    import plotly.plotly as py\n",
+        "    from plotly.tools import FigureFactory as FF\n",
+        "    \n",
+        "    z = [[0.300000, 0.00000, 0.65, 0.300000],\n",
+        "         [1, 0.100005, 0.45, 0.4300],\n",
+        "         [0.300000, 0.00000, 0.65, 0.300000],\n",
+        "         [1, 0.100005, 0.45, 0.00000]]\n",
+        "    \n",
+        "    figure = FF.create_annotated_heatmap(z)\n",
+        "    py.iplot(figure)\n",
+        "    ```\n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
