--- a/_posts/python/heatmap/annotated_heatmap.ipynb
+++ b/_posts/python/heatmap/annotated_heatmap.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:95a9d2de79a9988a9135726ed2a2cb6d5aa17e531b52513fc1f98a1616697b1f"
+  "signature": "sha256:15e2455ce927cbbde512434445143d97faf3b3e8821af1eb5c382c4dd4ff1968"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -368,7 +368,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "For more info on heatmaps, see: https://plot.ly/python/reference/#heatmap.<br> For more info about annotated_heatmaps, see:"
+      "For more info on heatmaps, see: https://plot.ly/python/reference/#heatmap.<br> For more info on annotated_heatmaps, see:"
      ]
     },
     {
@@ -444,7 +444,7 @@
       "    'annotated_heatmap.ipynb', 'python/annotated_heatmap', 'Python Annotated Heatmaps | plotly',\n",
       "    'How to make Annotated Heatmaps in Python with Plotly.',\n",
       "    name = 'Annotated Heatmaps',\n",
-      "    thumbnail='/images/ann_heat.png', language='python',\n",
+      "    thumbnail='/images/annheat.png', language='python',\n",
       "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=13)  "
      ],
      "language": "python",
@@ -457,7 +457,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML at 0x103ece750>"
+        "<IPython.core.display.HTML at 0x104a19990>"
        ]
       },
       {
@@ -467,7 +467,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML at 0x103ece790>"
+        "<IPython.core.display.HTML at 0x104a19950>"
        ]
       },
       {
@@ -476,17 +476,9 @@
        "text": [
         "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
        ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-        "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
-       ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
