--- a/_posts/python/table/table.ipynb
+++ b/_posts/python/table/table.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:015b6eb4f7265034a807acdbc0dc59292661e7fbd76ea56ef54d03dd9c5cf50f"
+  "signature": "sha256:16de921a2d32a864731ee4fa2e4349e04820af4bc2c970433cf57b1ddd37d8a8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -97,6 +97,116 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      " "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "####Add links"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import plotly.plotly as py\n",
+      "from plotly.tools import FigureFactory as FF \n",
+      "\n",
+      "data_matrix = [['User', 'Language', 'Chart Type', '# of Views'],\n",
+      "               ['<a href=\"https://plot.ly/~empet/folder/home\">empet</a>',\n",
+      "                '<a href=\"https://plot.ly/python/\">Python</a>',\n",
+      "                '<a href=\"https://plot.ly/~empet/8614/communities-in-a-facebook-network-defined-as-an-igraph-graph-data-1/\">Network Graph</a>',\n",
+      "                298],\n",
+      "               ['<a href=\"https://plot.ly/~Grondo/folder/home\">Grondo</a>',\n",
+      "                '<a href=\"https://plot.ly/matlab/\">Matlab</a>',\n",
+      "                '<a href=\"https://plot.ly/~Grondo/42/x-ray-reflectivity-from-euo-sample-103-chi2114/\">Subplots</a>',\n",
+      "                356],\n",
+      "               ['<a href=\"https://plot.ly/~Dreamshot/folder/home\">Dreamshot</a>',\n",
+      "                '<a href=\"https://help.plot.ly/tutorials/\">Web App</a>',\n",
+      "                '<a href=\"https://plot.ly/~Dreamshot/6575/_2014-us-city-populations/\">Bubble Map</a>',\n",
+      "                262],\n",
+      "               ['<a href=\"https://plot.ly/~FiveThirtyEight/folder/home\">FiveThirtyEight</a>',\n",
+      "                '<a href=\"https://help.plot.ly/tutorials/\">Web App</a>',\n",
+      "                '<a href=\"https://plot.ly/~FiveThirtyEight/30/median-ages-for-males-with-the-25-most-common-names-among-americans-estimated-to/\">Scatter</a>',\n",
+      "                692],\n",
+      "               ['<a href=\"https://plot.ly/~cpsievert/folder/home\">cpsievert</a>',\n",
+      "                '<a href=\"https://plot.ly/r/\">R</a>',\n",
+      "                '<a href=\"https://plot.ly/~cpsievert/1130/_1/\">Surface</a>',\n",
+      "                302]]\n",
+      "\n",
+      "table = FF.create_table(data_matrix)\n",
+      "py.iplot(table, filename='linked_table')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9525.embed\" height=\"230px\" width=\"100%\"></iframe>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 20,
+       "text": [
+        "<plotly.tools.PlotlyDisplay at 0x106cdfa50>"
+       ]
+      }
+     ],
+     "prompt_number": 20
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      " "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "With LaTeX"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import plotly.plotly as py\n",
+      "from plotly.tools import FigureFactory as FF \n",
+      "\n",
+      "data_matrix = [['Name', 'Equation'],\n",
+      "               ['Pythagorean Theorem', '$a^{2}+b^{2}=c^{2}$'],\n",
+      "               ['Euler\\'s formula', '$F-E+V=2$'],\n",
+      "               ['The Origin of Complex Numbers', '$i^{2}=-1$'],\n",
+      "               ['Einstein\\'s theory of relativity', '$E=m c^{2}$']]\n",
+      "\n",
+      "table = FF.create_table(data_matrix)\n",
+      "py.iplot(table)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9562.embed\" height=\"200px\" width=\"100%\"></iframe>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 39,
+       "text": [
+        "<plotly.tools.PlotlyDisplay at 0x106c7ed90>"
+       ]
+      }
+     ],
+     "prompt_number": 39
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "###Use a Panda's Dataframe"
      ]
     },
@@ -109,6 +219,13 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      " "
+     ]
     },
     {
      "cell_type": "markdown",
