ann_heatmap img test

--- a/_posts/python/table/table.ipynb
+++ b/_posts/python/table/table.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:16de921a2d32a864731ee4fa2e4349e04820af4bc2c970433cf57b1ddd37d8a8"
+  "signature": "sha256:fed4e5d07817da77bedda914c108cb890d1195c3ad8f5979e29ba99565d8f32b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -74,7 +74,7 @@
       "               ['Canada', 2010, 34000000]]\n",
       "\n",
       "table = FF.create_table(data_matrix)\n",
-      "py.iplot(table)"
+      "py.iplot(table, filename='simple_table')"
      ],
      "language": "python",
      "metadata": {},
@@ -167,7 +167,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "With LaTeX"
+      "####Use LaTeX"
      ]
     },
     {
@@ -184,41 +184,24 @@
       "               ['Einstein\\'s theory of relativity', '$E=m c^{2}$']]\n",
       "\n",
       "table = FF.create_table(data_matrix)\n",
-      "py.iplot(table)"
+      "py.iplot(table, filename='latex_table')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "html": [
-        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9562.embed\" height=\"200px\" width=\"100%\"></iframe>"
+        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9564.embed\" height=\"200px\" width=\"100%\"></iframe>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 39,
+       "prompt_number": 40,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x106c7ed90>"
+        "<plotly.tools.PlotlyDisplay at 0x106c7e910>"
        ]
       }
      ],
-     "prompt_number": 39
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "###Use a Panda's Dataframe"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/gapminderDataFiveYear.csv')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 40
     },
     {
      "cell_type": "markdown",
@@ -226,6 +209,259 @@
      "source": [
       " "
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "####Use a Panda's Dataframe"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import plotly.plotly as py\n",
+      "from plotly.tools import FigureFactory as FF\n",
+      "\n",
+      "import pandas as pd\n",
+      "\n",
+      "df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/gapminderDataFiveYear.csv')\n",
+      "df_sample = df[100:120]\n",
+      "\n",
+      "table = FF.create_table(df_sample)\n",
+      "py.iplot(table, filename='pandas_table')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9566.embed\" height=\"680px\" width=\"100%\"></iframe>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 41,
+       "text": [
+        "<plotly.tools.PlotlyDisplay at 0x106c9d9d0>"
+       ]
+      }
+     ],
+     "prompt_number": 41
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      " "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "####Include and Index Column"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import plotly.plotly as py\n",
+      "from plotly.tools import FigureFactory as FF \n",
+      "\n",
+      "data_matrix = [['Country', 'Year', 'Population'],\n",
+      "               ['United States', 2000, 282200000],\n",
+      "               ['Canada', 2000, 27790000],\n",
+      "               ['United States', 2005, 295500000],\n",
+      "               ['Canada', 2005, 32310000],\n",
+      "               ['United States', 2010, 309000000],\n",
+      "               ['Canada', 2010, 34000000]]\n",
+      "\n",
+      "table = FF.create_table(data_matrix, index=True)\n",
+      "py.iplot(table, filename='index_table')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9572.embed\" height=\"260px\" width=\"100%\"></iframe>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 44,
+       "text": [
+        "<plotly.tools.PlotlyDisplay at 0x106c7e650>"
+       ]
+      }
+     ],
+     "prompt_number": 44
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      " "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import plotly.plotly as py\n",
+      "from plotly.tools import FigureFactory as FF\n",
+      "\n",
+      "from datetime import datetime\n",
+      "import pandas.io.data as web\n",
+      "\n",
+      "df = web.DataReader(\"aapl\", 'yahoo', datetime(2009, 1, 1), datetime(2009, 4, 1))\n",
+      "\n",
+      "table = FF.create_table(df, index=True, index_title='Date')\n",
+      "py.iplot(table, filename='index_table_pd')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9574.embed\" height=\"1940px\" width=\"100%\"></iframe>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 51,
+       "text": [
+        "<plotly.tools.PlotlyDisplay at 0x107bfdd10>"
+       ]
+      }
+     ],
+     "prompt_number": 51
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      " "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "####Custom Table Colors\n",
+      "A custom colorscale should be a `list[list]`:<br> `[[0, 'Header_Color'],[.5, 'Odd_Row_Color'],[1, 'Even_Row_Color']]`"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import plotly.plotly as py\n",
+      "from plotly.tools import FigureFactory as FF\n",
+      "\n",
+      "import pandas as pd\n",
+      "\n",
+      "df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/gapminderDataFiveYear.csv')\n",
+      "df_sample = df[400:410]\n",
+      "\n",
+      "colorscale = [[0, '#4C152B'],[.5, '#E9E2E5'],[1, '#ffffff']]\n",
+      "\n",
+      "table = FF.create_table(df_sample, colorscale=colorscale)\n",
+      "py.iplot(table, filename='color_table')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9576.embed\" height=\"380px\" width=\"100%\"></iframe>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 57,
+       "text": [
+        "<plotly.tools.PlotlyDisplay at 0x107bfde10>"
+       ]
+      }
+     ],
+     "prompt_number": 57
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      " "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "####Custom Font Colors"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import plotly.plotly as py\n",
+      "from plotly.tools import FigureFactory as FF\n",
+      "\n",
+      "import pandas as pd\n",
+      "\n",
+      "text = [['Team', 'Rank'],\n",
+      "        ['A', 1],['B', 2],['C', 3],['D', 4],[],[]]\n",
+      "\n",
+      "colorscale = [[0, '#272D31'],[.5, '#E9E2E5'],[1, '#ffffff']]\n",
+      "font_colors=['#272D31']\n",
+      "table = FF.create_table(df_sample, colorscale=colorscale)\n",
+      "py.iplot(table, filename='color_table')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "####Tables in Subplots"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -244,17 +480,85 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "NameError",
-       "evalue": "name 'FF' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-4-dd6b56e08a3e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhelp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_table\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[0;31mNameError\u001b[0m: name 'FF' is not defined"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Help on function create_table in module plotly.tools:\n",
+        "\n",
+        "create_table(table_text, colorscale=None, font_colors=None, index=False, index_title='', annotation_offset=0.45, height_constant=30, hoverinfo='none', **kwargs)\n",
+        "    BETA function that creates data tables\n",
+        "    \n",
+        "    :param (pandas.Dataframe | list[list]) text: data for table.\n",
+        "    :param (str|list[list]) colorscale: Colorscale for table where the\n",
+        "        color at value 0 is the header color, .5 is the first table color\n",
+        "        and 1 is the second table color. (Set .5 and 1 to avoid the striped\n",
+        "        table effect). Default=[[0, '#66b2ff'], [.5, '#d9d9d9'],\n",
+        "        [1, '#ffffff']]\n",
+        "    :param (list) font_colors: Color for fonts in table. Can be a single\n",
+        "        color, three colors, or a color for each row in the table.\n",
+        "        Default=['#000000'] (black text for the entire table)\n",
+        "    :param (int) height_constant: Constant multiplied by # of rows to\n",
+        "        create table height. Default=30.\n",
+        "    :param (bool) index: Create (header-colored) index column index from\n",
+        "        Pandas dataframe or list[0] for each list in text. Default=False.\n",
+        "    :param (string) index_title: Title for index column. Default=''.\n",
+        "    :param kwargs: kwargs passed through plotly.graph_objs.Heatmap.\n",
+        "        These kwargs describe other attributes about the annotated Heatmap\n",
+        "        trace such as the colorscale. For more information on valid kwargs\n",
+        "        call help(plotly.graph_objs.Heatmap)\n",
+        "    \n",
+        "    Example 1: Simple Plotly Table\n",
+        "    ```\n",
+        "    import plotly.plotly as py\n",
+        "    from plotly.tools import FigureFactory as FF\n",
+        "    \n",
+        "    text = [['Country', 'Year', 'Population'],\n",
+        "            ['US', 2000, 282200000],\n",
+        "            ['Canada', 2000, 27790000],\n",
+        "            ['US', 2010, 309000000],\n",
+        "            ['Canada', 2010, 34000000]]\n",
+        "    \n",
+        "    table = FF.create_table(text)\n",
+        "    py.iplot(table)\n",
+        "    ```\n",
+        "    \n",
+        "    Example 2: Table with Custom Coloring\n",
+        "    ```\n",
+        "    import plotly.plotly as py\n",
+        "    from plotly.tools import FigureFactory as FF\n",
+        "    \n",
+        "    text = [['Country', 'Year', 'Population'],\n",
+        "            ['US', 2000, 282200000],\n",
+        "            ['Canada', 2000, 27790000],\n",
+        "            ['US', 2010, 309000000],\n",
+        "            ['Canada', 2010, 34000000]]\n",
+        "    \n",
+        "    table = FF.create_table(text,\n",
+        "                          colorscale=[[0, '#000000'],\n",
+        "                                      [.5, '#80beff'],\n",
+        "                                      [1, '#cce5ff']],\n",
+        "                          font_colors=['#ffffff', '#000000',\n",
+        "                                     '#000000'])\n",
+        "    py.iplot(table)\n",
+        "    ```\n",
+        "    Example 3: Simple Plotly Table with Pandas\n",
+        "    ```\n",
+        "    import plotly.plotly as py\n",
+        "    from plotly.tools import FigureFactory as FF\n",
+        "    \n",
+        "    import pandas as pd\n",
+        "    \n",
+        "    df = pd.read_csv('http://www.stat.ubc.ca/~jenny/notOcto/STAT545A/examples/gapminder/data/gapminderDataFiveYear.txt', sep='      ')\n",
+        "    df_p = df[0:25]\n",
+        "    \n",
+        "    table_simple = FF.create_table(df_p)\n",
+        "    py.iplot(table_simple)\n",
+        "    ```\n",
+        "\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 47
     },
     {
      "cell_type": "code",
